profilelist1exp/unpackaged/objects/Solution__c.object
<CustomObject>
    <fields>
        <fullName>Actions_Available__c</fullName>
        <formula>HYPERLINK(&apos;/apex/SolutionRefresh?id=&apos;+ Id , IMAGE(&quot;resource/1352267424000/OSC_Refresh&quot;, &apos;Refresh&apos;), &apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSC_Regional_ID__c</fullName>
        <externalId>true</externalId>
        <label>OSC Regional ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSC_Solution_ID__c</fullName>
        <formula>SUBSTITUTE (OSC_Regional_ID__c , LEFT( OSC_Regional_ID__c , FIND(&quot;:&quot;, OSC_Regional_ID__c )), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSC Solution ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XPOD_Number__c</fullName>
        <description>This field is used to capture XPOD Number from OSC</description>
        <label>XPOD Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XPOD_Status__c</fullName>
        <description>This field is used to capture XPOD Status from OSC.</description>
        <label>XPOD Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Solution</label>
    <nameField>
        <displayFormat>S{0000000000}</displayFormat>
        <label>Solution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>